# Mycelium

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  oc.sh
.github/ISSUE_TEMPLATE/: compilation_errors.md  missing_dependencies.md  peerid_serialization.md  profilebuilder_username.md  visibility_conflict.md
.github/workflows/: cmake-multi-platform.yml
crates/myc-crypto/: Cargo.toml
crates/myc-crypto/src/: encryption.rs  hybrid.rs  keys.rs  lib.rs  quantum_resistant.rs  signatures.rs
crates/myc-guestbook/: Cargo.toml
crates/myc-guestbook/src/: approval.rs  entry.rs  lib.rs  pending.rs
crates/myc-identity/: Cargo.toml
crates/myc-identity/src/: discovery.rs  lib.rs  lookup.rs  registry.rs
crates/myc-p2p/: Cargo.toml
crates/myc-p2p/src/: behaviour.rs  gossip.rs  lib.rs
crates/myc-post/: Cargo.toml
crates/myc-post/src/: lib.rs
crates/myc-profile/: Cargo.toml
crates/myc-profile/src/: layout.rs  lib.rs  profile.rs  storage.rs  sync.rs  theme.rs  validation.rs  widget.rs
crates/myc-protocol/: Cargo.toml
crates/myc-protocol/src/: lib.rs
crates/myc-social/: Cargo.toml
crates/myc-social/src/: graph.rs  lib.rs  privacy.rs
crates/myc-storage/: Cargo.toml
crates/myc-storage/src/: lib.rs
crates/myc-token/: Cargo.toml
docs/: architecture.md
mycelium-cpp/: CMakeLists.txt  TODOS.md
mycelium-cpp/src/: main.cpp
mycelium-cpp/src/config/: myc_config.hpp
mycelium-cpp/src/crypto/: myc_bip39.hpp  myc_crypto.hpp
mycelium-cpp/src/guestbook/: myc_guestbook.hpp
mycelium-cpp/src/gui/: myc_gui.hpp
mycelium-cpp/src/identity/: myc_identity.hpp
mycelium-cpp/src/media/: myc_video.hpp
mycelium-cpp/src/p2p/: myc_p2p.hpp
mycelium-cpp/src/post/: myc_post.hpp
mycelium-cpp/src/profile/: myc_profile.hpp  myc_profile_layout.hpp  myc_profile_theme.hpp  myc_profile_validation.hpp
mycelium-cpp/src/protocol/: myc_protocol.hpp
mycelium-cpp/src/social/: myc_social_graph.hpp
mycelium-cpp/src/storage/: myc_storage.hpp
mycelium-cpp/src/token/: myc_token.hpp
mycelium-cpp/src/tui/: myc_tui.hpp
mycelium-cpp/src/web/: myc_web.hpp
proxmox/: README.md  create-mycelium-ct.sh
sovereign-node/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
sovereign-node/crates/crypto/: Cargo.toml
sovereign-node/crates/crypto/src/: hybrid.rs  lib.rs
sovereign-node/crates/p2p/: Cargo.toml
sovereign-node/crates/p2p/src/: behaviour.rs  discovery.rs  gossip.rs  lib.rs  peer_table.rs  storage_handoff.rs
sovereign-node/crates/post/: Cargo.toml
sovereign-node/crates/post/src/: lib.rs
sovereign-node/crates/protocol/: Cargo.toml
sovereign-node/crates/protocol/src/: lib.rs
sovereign-node/crates/storage/: Cargo.toml
sovereign-node/crates/storage/src/: lib.rs
sovereign-node/crates/token/: Cargo.toml
sovereign-node/crates/token/src/: lib.rs
sovereign-node/docs/: architecture.md
