[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/p2p",
    "crates/storage",
    "crates/token",
    "crates/post",
    "crates/protocol",
    "bin/sovereign-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Sovereign Node Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

[workspace.dependencies]
libp2p = { version = "0.54", features = [
    "tcp",
    "quic",
    "yamux",
    "noise",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "ping",
    "relay",
    "dcutr",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
prost = "0.12"
bytes = "1.5"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }
zeroize = { version = "1.7", features = ["derive"] }
aes-gcm = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
