[package]
name = "myc-guestbook"
version.workspace = true
edition.workspace = true

[dependencies]
myc-crypto = { path = "../myc-crypto" }
myc-profile = { path = "../myc-profile" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
