[package]
name = "myc-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
myc-protocol = { path = "../myc-protocol" }
myc-post = { path = "../myc-post" }
myc-crypto = { path = "../myc-crypto" }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
