[package]
name = "myc-post"
version.workspace = true
edition.workspace = true

[dependencies]
myc-protocol = { path = "../myc-protocol" }
myc-crypto = { path = "../myc-crypto" }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
