[package]
name = "myc-profile"
version.workspace = true
edition.workspace = true

[dependencies]
myc-crypto = { path = "../myc-crypto" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1.10"
libp2p = { workspace = true }
