[package]
name = "myc-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
