[package]
name = "myc-storage"
version.workspace = true
edition.workspace = true

[dependencies]
myc-protocol = { path = "../myc-protocol" }
myc-crypto = { path = "../myc-crypto" }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
