[package]
name = "sov-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
sov-protocol = { path = "../protocol" }
sov-post = { path = "../post" }
sov-crypto = { path = "../crypto" }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
