[package]
name = "sov-post"
version.workspace = true
edition.workspace = true

[dependencies]
sov-protocol = { path = "../protocol" }
sov-crypto = { path = "../crypto" }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
