[package]
name = "sov-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[derive(Debug, Clone, PartialEq, Eq)]
pub enum MsgType {
    PostCreated,
    PostShared,
    PostViewed,
    PostCommented,
    PeerAnnounce,
    StorageOffer,
    StorageAccept,
    StorageReject,
    Heartbeat,
    SyncRequest,
    SyncResponse,
}

impl MsgType {
    pub fn as_str(&self) -> &'static str {
        match self {
            MsgType::PostCreated => "POST_CREATED",
            MsgType::PostShared => "POST_SHARED",
            MsgType::PostViewed => "POST_VIEWED",
            MsgType::PostCommented => "POST_COMMENTED",
            MsgType::PeerAnnounce => "PEER_ANNOUNCE",
            MsgType::StorageOffer => "STORAGE_OFFER",
            MsgType::StorageAccept => "STORAGE_ACCEPT",
            MsgType::StorageReject => "STORAGE_REJECT",
            MsgType::Heartbeat => "HEARTBEAT",
            MsgType::SyncRequest => "SYNC_REQUEST",
            MsgType::SyncResponse => "SYNC_RESPONSE",
        }
    }
}
