[package]
name = "sov-storage"
version.workspace = true
edition.workspace = true

[dependencies]
sov-protocol = { path = "../protocol" }
sov-crypto = { path = "../crypto" }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
